--- a/Assignment1/Views/Store/Details.cshtml
+++ b/Assignment1/Views/Store/Details.cshtml
@@ -12,7 +12,7 @@
 {
     <article>
         <h3>@a.Title - @a.Director.Name</h3>
-        <img src="@a.MovieArtUrl" alt="@a.Title" />
+        <img src="@a.MovieArtUrl" alt="@a.Title" width="100" />
     </article>
     <p>@String.Format("{0:c}", a.Price)</p>
 
