--- a/Assignment1/Views/StoreManager/Edit.cshtml
+++ b/Assignment1/Views/StoreManager/Edit.cshtml
@@ -7,10 +7,10 @@
 
 <h2>Edit</h2>
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Edit", "StoreManager", FormMethod.Post, new { @enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Movie</h4>
         <hr />
@@ -18,7 +18,7 @@
         @Html.HiddenFor(model => model.MovieId)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.GenreId, "GenreId", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.GenreId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("GenreId", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.GenreId, "", new { @class = "text-danger" })
@@ -26,7 +26,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.DirectorId, "DirectorId", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.DirectorId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("DirectorId", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.DirectorId, "", new { @class = "text-danger" })
@@ -52,8 +52,12 @@
         <div class="form-group">
             @Html.LabelFor(model => model.MovieArtUrl, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.MovieArtUrl, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.MovieArtUrl, "", new { @class = "text-danger" })
+
+                <input type="file" name="MovieArtUrl" id="AlbumArtUrl" />
+                @if (Model.MovieArtUrl != null)
+                {
+                    <img src=" @Model.MovieArtUrl" alt="@Model.Title" />
+                }
             </div>
         </div>
 
