--- a/Assignment1/Views/Home/Index.cshtml
+++ b/Assignment1/Views/Home/Index.cshtml
@@ -2,29 +2,74 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>MOVIE STORE</h1>
-    <p class="lead">Movie Store is a Store which has a wide range of Movies. You name it and we will have the Movie for You!</p>
-    <p><a href="http://www.imdb.com/" class="btn btn-primary btn-lg">Take a Look  &raquo;</a></p>
-</div>
+<!-- Carousel
+    ================================================== -->
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+        <div class="item active">
+            <img src="~/Content/Images/batman.jpg" alt="Batman slide">
+            <div class="container">
+                <div class="carousel-caption">
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-          The Movie Store consists of wide range of movies. The Store collects movies on the basis of genres. The Customer can 
-          view from different genres like Action, Adventure, Horror, Comedy ETC.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+                    <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+                </div>
+            </div>
+        </div>
+        <div class="item">
+            <img src="~/Content/Images/Dunkirk.jpg" alt="Dunkirk slide">
+            <div class="container">
+                <div class="carousel-caption">
+ 
+                    <p><a class="btn btn-lg btn-primary" href="#" role="button">Go Store</a></p>
+                </div>
+            </div>
+        </div>
+        <div class="item">
+            <img src="~/Content/Images/interstellar.jpg" alt="Interstellar slide">
+            <div class="container">
+                <div class="carousel-caption">
+
+                    <p><a class="btn btn-lg btn-primary" href="#" role="button">Store Manager</a></p>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+    <a class="left carousel-control" href="#myCarousel" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a>
+    <a class="right carousel-control" href="#myCarousel" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
+</div><!-- /.carousel -->
+<div class="container marketing">
+
+    <!-- Three columns of text below the carousel -->
+    <div class="row">
+        <div class="col-lg-4">
+            <img class="img-circle" src="~/Content/Images/the-departed-3.jpg" alt="Departed placeholder " width="140">
+            <h2>Getting started</h2>
+            <p>
+                ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that enables a clean separation of concerns
+
+            </p>
+            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        </div><!-- /.col-lg-4 -->
+        <div class="col-lg-4">
+            <img class="img-circle" src="~/Content/Images/lincoln.jpg" alt="Lincolan placeholder " width="140">
+            <h2>Get more libraries</h2>
+            <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
+            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        </div><!-- /.col-lg-4 -->
+        <div class="col-lg-4">
+            <img class="img-circle" src="~/Content/Images/the-prestige.jpg" alt="prestige placeholder " width="140">
+            <h2>Web Hosting</h2>
+            <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
+            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        </div><!-- /.col-lg-4 -->
+    </div><!-- /.row -->
+
+
+
+
